feat: Added Layout for Dashboard Screen

--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/delete-asset-groups/delete-asset-groups.component.css
@@ -357,10 +357,9 @@ li.list-inputs:hover {
 }
 
 .data-table-head-outer {
-  background-color: var(--background-white);
+  background-color: var(--table-header-background);
   left: 0;
   width: 100%;
-  min-height: 1.7em;
   z-index: 2;
   position: relative;
 }
@@ -382,7 +381,7 @@ li.list-inputs:hover {
   position: relative;
   min-width: 100%;
   left: 0;
-  background-color: var(--background-white);
+  background-color: var(--table-header-background);
   z-index: 1;
   bottom: 0;
   width: fit-content;
