--- a/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
+++ b/webapp/src/app/pacman-features/modules/assets/asset-details/asset-details.component.html
@@ -42,8 +42,8 @@
                                 <app-doughnut-chart *ngIf='policyAvailable[0]' [chartContId]="'statsDoughnut'"
                                     [graphData]="policyData" [graphWidth]="widgetWidth" [flexTrue]="true"
                                     [graphHeight]="widgetHeight" [MainTextcolor]='MainTextcolor'
-                                    [innerRadious]='innerRadious' [outerRadious]='outerRadious'
-                                    [strokeColor]="strokeColor" (navigatePage)="navigateDataTable($event)">
+                                    [innerRadius]='innerRadius' [outerRadius]='outerRadius' [strokeColor]="strokeColor"
+                                    (navigatePage)="navigateDataTable($event)">
                                 </app-doughnut-chart>
                             </div>
                             <div class="error_msg">
@@ -62,8 +62,8 @@
                                 <app-doughnut-chart *ngIf='policyAvailable[1]' [chartContId]="'statsDoughnuttwo'"
                                     [graphData]="hostData" [graphWidth]="widgetWidth" [flexTrue]="true"
                                     [graphHeight]="widgetHeight" [MainTextcolor]='MainTextcolor'
-                                    [innerRadious]='innerRadious' [outerRadious]='outerRadious'
-                                    [strokeColor]="strokeColor" (navigatePage)="navigateToVulnerabilitiesList($event)">
+                                    [innerRadius]='innerRadius' [outerRadius]='outerRadius' [strokeColor]="strokeColor"
+                                    (navigatePage)="navigateToVulnerabilitiesList($event)">
                                 </app-doughnut-chart>
                             </div>
                             <div class="error_msg">
@@ -117,8 +117,8 @@
                                         *ngFor="let data of diskData ; let i = index " id="d3{{i}}">
                                         <app-doughnut-chart [chartContId]="'d3'+i" [graphData]="data"
                                             [graphWidth]="widgetWidth1" [flexTrue]="true" [graphHeight]="widgetHeight1"
-                                            [MainTextcolor]='MainTextcolor' [innerRadious]='innerRadious1'
-                                            [outerRadious]='outerRadious1' [strokeColor]="strokeColor">
+                                            [MainTextcolor]='MainTextcolor' [innerRadius]='innerRadius1'
+                                            [outerRadius]='outerRadius1' [strokeColor]="strokeColor">
                                         </app-doughnut-chart>
                                         <div class="donutDetails">
                                             <div class="environmentName nowrap-ellipsis" title="{{data.name}}">
