--- a/webapp/src/app/post-login-app/common/header/header.component.html
+++ b/webapp/src/app/post-login-app/common/header/header.component.html
@@ -1,12 +1,13 @@
 <div class="header-wrapper">
   <div class="header-search-wrapper" (click)="handleSearch()">
     <div class="header-search-content-container">
-      <mat-icon
+      <!-- <mat-icon
         class="mat-icon"
         matPrefix
         svgIcon="customSearchIcon"
-      ></mat-icon>
+      ></mat-icon> -->
 
+      <img src="/assets/icons/header-search.svg" alt="" />
       <form class="header-search-form">
         <mat-form-field class="header-search-full-width" appearance="fill">
           <input type="search" matInput placeholder="Search" />
