--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.css
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/create-update-target-types/create-update-target-types.component.css
@@ -370,10 +370,9 @@ li.list-inputs:hover {
 }
 
 .data-table-head-outer {
-  background-color: var(--background-white);
+  background-color: var(--table-header-background);
   left: 0;
   width: 100%;
-  min-height: 1.7em;
   z-index: 2;
   position: relative;
 }
@@ -395,7 +394,7 @@ li.list-inputs:hover {
   position: relative;
   min-width: 100%;
   left: 0;
-  background-color: var(--background-white);
+  background-color: var(--table-header-background);
   z-index: 1;
   bottom: 0;
   width: fit-content;
