--- a/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
+++ b/webapp/src/app/pacman-features/modules/compliance/compliance-dashboard/compliance-dashboard.component.css
@@ -11,35 +11,59 @@
  * implied. See the License for the specific language governing permissions and
  * limitations under the License.
  */
+ 
+ .container-wrapper {
+    display: flex;
+    flex-direction: column;
+    padding: 28px 28px 28px 28px;
+    height: 100%;
+    width: 100%;
+    min-width: 550px;
+  }
+ .container-1{
+    height: 108px;
+    margin-bottom: 20px;
+  }
+  .container-2{
+    height: 396px;
+    margin-bottom: 20px;
+  }
+  .container-3{
+    height: 396px;
+    margin-bottom: 20px;
+  }
+  .container-4 {
+    background-color: var(--background-white);
+    height: 504px;
+    border-radius: var(--border-radius);
+  }
 
-.floating-widgets-header {
-    height: 6em;
-    padding: 1.9em 1.8em;
-    align-items: center;
-}
+  mat-grid-tile {
+    width: 100%;
+    height: 100%;
+    border-radius: 16px;
+  }
 
+  .violation-tile{
+    border: 1px solid var(--border-200);
+  }
 
+  @media (max-width:800px){
+    .container-1 {
+        height: auto;
+    }
+    .container-2 {
+        height: auto;
+    }
+    .container-3 {
+      height: auto;
+  }
+    .container-4 {
+        height: auto;
+    }
+  }
 
-.compliance-dashboard-wrapper /deep/ .data-table-wrap .table-cells:nth-child(1) {
-    width: 150px;
-} 
-
-.compliance-dashboard-wrapper /deep/ .data-table-wrap .table-cells:nth-child(2) {
-    width: 430px;
-}
-
-.compliance-dashboard-wrapper /deep/ .data-table-wrap .table-cells:nth-child(3) {
-    width: 200px;
-}
-
-.compliance-dashboard-wrapper /deep/ .data-table-wrap .table-cells {
-    width: 180px;
-}
-
-.compliance-dashboard-wrapper /deep/ .data-table-wrap {
-    height: calc( 70vh - 5em );
-}
-
-.compliance-dashboard-wrapper{
-    padding-top: 20px;  
-}
+  app-data-table{
+    height: 100%;
+    width: 100%;
+  }
