--- a/webapp/src/app/pacman-features/secondary-components/digital-dev-strategy-distribution/digital-dev-strategy-distribution.component.html
+++ b/webapp/src/app/pacman-features/secondary-components/digital-dev-strategy-distribution/digital-dev-strategy-distribution.component.html
@@ -12,14 +12,18 @@
  * limitations under the License.
  -->
 
- <section class="digital-dev-strategy-distribution-wrapper relative">
+<section class="digital-dev-strategy-distribution-wrapper relative">
     <div class="sub-header">
-        <app-title-burger-head [subHeadTitle]="'Repositories Distribution by Branching Strategies'"></app-title-burger-head>
+        <app-title-burger-head [subHeadTitle]="'Repositories Distribution by Branching Strategies'">
+        </app-title-burger-head>
     </div>
     <div class="graph-chart-cont show-links relative" id="devApplicationDist" *ngIf='dataComing && !showLoader'>
-        <app-doughnut-chart (linkData)='handleLink($event)' *ngIf='donutData' [chartContId]="'devApplicationDist'" [graphData]="donutData" [graphWidth]="widgetWidth" [flexTrue]="true" [graphHeight]="widgetHeight" [MainTextcolor]='MainTextcolor' [innerRadious]='innerRadious' [outerRadious]='outerRadious' [strokeColor]="strokeColor"></app-doughnut-chart>
+        <app-doughnut-chart (linkData)='handleLink($event)' *ngIf='donutData' [chartContId]="'devApplicationDist'"
+            [graphData]="donutData" [graphWidth]="widgetWidth" [flexTrue]="true" [graphHeight]="widgetHeight"
+            [MainTextcolor]='MainTextcolor' [innerRadius]='innerRadius' [outerRadius]='outerRadius'
+            [strokeColor]="strokeColor"></app-doughnut-chart>
     </div>
-    <article class='center error_handling' *ngIf="!datacoming" >
+    <article class='center error_handling' *ngIf="!datacoming">
         <div class="error_msg">
             <app-error-message *ngIf='seekdata == true' [selectedValue]="errorMessage"></app-error-message>
         </div>
