--- a/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.css
+++ b/webapp/src/app/post-login-app/common/contextual-menu/contextual-menu.component.css
@@ -16,7 +16,10 @@
   background-color: var(--background-white);
   height: 100vh;
   border-right: 1px solid var(--border-200);
-  padding: 0px 16px;
+}
+
+.tree-component {
+  padding: 16px 0px 16px 16px;
 }
 
 ::ng-deep .tree-children {
@@ -28,7 +31,6 @@
 ::ng-deep tree-node-content,
 .know-your-app-content {
   width: 155px !important;
-  height: 18px !important;
   display: ruby !important;
   font-family: var(--text-medium-font-family);
   font-style: normal;
@@ -40,6 +42,13 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0px 16px 0px 12px !important;
+}
+
+#logo {
+  padding-top: 20px;
+  padding-left: 16px;
+  width: "146px";
+  height: "48px";
 }
 
 .icon {
@@ -70,10 +79,12 @@
     brightness(92%) contrast(87%);
 }
 
-#logo {
-  width: 192px;
-  height: 56px;
-  margin: 20px;
+#app-logo {
+  padding: 20px 0px 20px 16px;
+}
+
+.asset-switcher-container {
+  padding: 0px 16px;
 }
 
 ::ng-deep .angular-tree-component {
@@ -125,7 +136,7 @@
 }
 
 ::ng-deep tree-viewport {
-  height: calc(100vh - 182px) !important;
+  height: calc(100vh - 205px) !important;
   overflow-x: hidden;
 }
 
@@ -154,4 +165,5 @@
 .know-your-app-wrapper {
   background-color: var(--background-white);
   cursor: pointer;
+  margin-left: 16px;
 }
