--- a/webapp/src/variables.css
+++ b/webapp/src/variables.css
@@ -44,6 +44,13 @@
   --icons-800: #020b12;
   --icons-900: #010609;
 
+  --vizualization-significant-color: #D95140;
+  --vizualization-moderate-color: #FFCFCF;
+  --vizualization-major-color: #F58F6F;
+  --vizualization-minor-color: #F5B66F;
+  --vizualization-insignificant-color: #D6D6D6;
+  --vizualization-informational-color: #506EA7;
+
   --spacing-xs: 2px;
   --spacing-sm: 4px;
   --spacing-md: 8px;
@@ -57,6 +64,7 @@
 
   --background-white: #ffffff;
   --background-grey: #f2f3f5;
+  --table-header-background: #fafafa;
 
   --text-headline-1: 700 41px/100% var(--text-medium-font-family);
   --text-headline-2: 700 35px/100% var(--text-medium-font-family);
